Refactor source code structure and improve code quality
- Update MethodType, ResponseType, and Result classes
- Enhance PveClient and PveClientBase implementation
- Improve error handling and response processing
- Code cleanup and optimization